<resources>
    <string name="app_name">Giatros</string>
    <string name="prompt_email">Enter Email</string>
    <string name="prompt_password">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="field_required">Required</string>
    <string name="invalid_email">Syntax Invalid</string>
    <string name="incorrect_password">Syntax Invalid</string>
    <string name="splash_text">Hello World, splash</string>
    <string name="title_activity_giatros">Giatros</string>
    <string name="title_activity_login_activity">Login</string>
    <string name="desc">Steven Gerrard</string>
    <string name="title_activity_symptoms">Symptoms</string>
    <string name="title_activity_hello">Hello</string>
    <string name="find_diseases">Find Diseases</string>
    <string name="tag">abhinav</string>
    <string name="sample_symptom">Sample Symptom</string>
    <string name="add_button">+</string>
    <string name="cancel_button">X</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email Id</string>
    <string name="login_sign_up">New User? Sign Up!</string>
    <string name="tests">Tests</string>
    <string name="more">More</string>
    <string name="call">Call</string>
    <string name="title_activity_appointment">AppointmentActivity</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Find People</item>
        <item>Photos</item>
        <item>Communities</item>
        <item>Pages</item>
        <item>What\'s Hot</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <!--<array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>-->

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
</resources>