<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"><EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/email_id"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="34dp"
    android:width="320sp"
    android:hint="@string/email_hint"
    android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:width="320sp"
        android:hint="@string/password_hint"
        android:layout_below="@+id/email_id"
        android:layout_alignStart="@+id/email_id"
        android:layout_marginTop="20sp"
        android:inputType="textPassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:id="@+id/sign_in"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_sign_up"
        android:id="@+id/sign_up"
        android:layout_below="@+id/sign_in"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp" />
</RelativeLayout>