<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.abhinavankur.giatros.SymptomsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/list"
                android:layout_width="wrap_content"
                android:layout_height="300sp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:nestedScrollingEnabled="false" />

            <AutoCompleteTextView
                android:id="@+id/symptomTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/list"
                android:layout_marginTop="34dp"
                android:width="300sp"
                android:completionHint="Fill Symptoms"
                android:hint="@string/sample_symptom"
                android:textAlignment="center" />

            <Button
                android:id="@+id/findDiseases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/symptomTextView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/find_diseases" />

            <Button
                android:id="@+id/addButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/symptomTextView"
                android:layout_alignParentEnd="true"
                android:text="@string/add_button" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
